# great_cto

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  manifest  package-lock.json  package.json
.beads/: metadata.json
.claude-plugin/: plugin.json  settings.example.json
.github/: labels.md
agents/: accounting-reviewer.md  adtech-privacy-reviewer.md  ai-clinical-reviewer.md  ai-eval-engineer.md  ai-leash-reviewer.md  ai-prompt-architect.md  ai-security-reviewer.md  aml-bsa-reviewer.md  api-platform-reviewer.md  app-scaffolder.md  appraisal-reviewer.md  architect.md  auth-engineer.md  bio-data-reviewer.md  biosecurity-reviewer.md  cli-reviewer.md  climate-mrv-reviewer.md  clinical-trials-reviewer.md  cmmc-reviewer.md  cms-reviewer.md  code-reviewer.md  collections-reviewer.md  connector-builder.md  continuous-learner.md  coordinator.md  credentialing-reviewer.md  customs-trade-reviewer.md  data-platform-reviewer.md  db-migration-reviewer.md  decision-scorer.md  design-advisor.md  devops.md  devtools-reviewer.md  (+67 more)
tests/fixtures/cli-tool-python/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
tests/fixtures/cli-tool-python/expected/: manifest.json
tests/fixtures/cli-tool-python/src/: cli.py
tests/fixtures/robotics-ros2/: CMakeLists.txt  README.md  expected.json  package.xml
tests/fixtures/trading-system-rust/: .gitignore  Cargo.toml  README.md  render.yaml
tests/fixtures/trading-system-rust/expected/: manifest.json
tests/fixtures/trading-system-rust/src/: executor.rs  lib.rs  risk.rs
(+1113 files in other folders)
