<?xml version="1.0"?>
<package format="3">
  <name>surgical_robot_perception</name>
  <version>0.1.0</version>
  <description>ROS 2 perception node for surgical robot.</description>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>sensor_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
