[package]
name = "trading-bot-fixture"
version = "0.1.0"
edition = "2021"
description = "Deliberately minimal copy-trading bot for great_cto tests"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
